--- a/first.html
+++ b/first.html
@@ -16,7 +16,7 @@
 <label for=":dzongkhag"
     <h1>kuzuzangpo</hl> 
     <p>my name<br> is <b>Kinlay Gyeltshen</b></p>
-    I study at <a href=":https://www.cst.edu.bt/"><CST</a><br>
+    I study at <a href=":https://www.cst.edu.bt/"><CST</a>CST<br>
     <img src=":"
 
 
