--- a/simple landing page/landing.html
+++ b/simple landing page/landing.html
@@ -23,7 +23,7 @@
     </main>
     <div class="container">
         <div class="product-grid">
-            <div class="product 1">
+            <div class="product ">
                 <div class="product-info">
                     <h3>Rocket book</h3>
                     <p>Nu.750</p>
