--- a/htfcytdctc.html
+++ b/htfcytdctc.html
@@ -6,7 +6,7 @@
     <title>seminar registration</title>
 </head>
 <body>
-    <h1>college siminar registration</h1>
+    <h1><i><ins><b>college siminar registration</b></ins></i></h1>
     <form>
         <label for="name">Name: </label><br>
         <input type="text"required><br><br>
