--- a/first.html
+++ b/first.html
@@ -13,11 +13,12 @@
     <input type="text:"></input>
     <label for="dob">Date of Birth</label><br
     <input type="text"></input>
-<label for=":dzongkhag"
+    <label for=":dzongkhag"
     <h1>kuzuzangpo</hl> 
     <p>my name<br> is <b>Kinlay Gyeltshen</b></p>
     I study at <a href=":https://www.cst.edu.bt/"><CST</a>CST<br>
-    <img src=":"
+    <img src=":https://www.google.com/url?sa=i&url=https%3A%2F%2Fstock.adobe.com%2Fsearch%3Fk%3D%2522beautiful%2Bwallpaper%2522&psig=AOvVaw0L4KjlVjsVj_Zl98S0rijT&ust=1724953651044000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCPixxo79mIgDFQAAAAAdAAAAABAa
+    "
 
 
     
