--- a/SDA101_02240347/personal/contact.html
+++ b/SDA101_02240347/personal/contact.html
@@ -22,7 +22,7 @@
         <div class="content">
             <div class="profile-left">
                 <div class="main-photo">
-                    <img src="/SDA101_02240347/IMG_20230322_211725_0825.jpg" alt="Profile Photo">
+                    <img src="received_260473663450331.jpeg" alt="Profile Photo">
                     <div class="username-overlay">
                         <p>Kinlay Gyeltshen</p>
                     </div>
@@ -57,7 +57,7 @@
             <div class="profile-right">
                 <div class="contact-card">
                     <div class="qr-section">
-                        <img src="/SDA101_02240347/WhatsApp Image 2024-10-04 at 09.57.32.jpeg" alt="QR Code">
+                        <img src="WhatsApp Image 2024-10-04 at 09.57.32.jpeg" alt="QR Code">
                     </div>
                     <div class="contact-details">
                         <p class="name">Kinlay Gyeltshen</p>
